Create general page structure

--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
 </head>
 
 <body>
+    <header>
+        Header
+    </header>
+    <main>
+        Main Content
+    </main>
+    <footer>
+        Footer
+    </footer>
 
 </body>
 
