--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 
 <body>
     <header>
-        Header
+        <a href="index.html">
+            <h1 id="logo">Love Running</h1>
+        </a>
     </header>
     <main>
         Main Content
