added font awesome kit and facebook logo in footer

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Love Running. Club for runners in Dublin, Ireland, Uraban running, trail running. Dublin docklands and Phoenix Park">
-    <meta name="keywords" content="love running, run, running, running club, runners, Ireland, Dublin, sport, excercise">
+    <meta name="description"
+        content="Love Running. Club for runners in Dublin, Ireland, Uraban running, trail running. Dublin docklands and Phoenix Park">
+    <meta name="keywords"
+        content="love running, run, running, running club, runners, Ireland, Dublin, sport, excercise">
     <title>Love Running</title>
     <!--Favicon-->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
@@ -34,9 +36,13 @@
         Main Content
     </main>
     <footer>
-        Footer
+        <ul>
+            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+        </ul>
     </footer>
-
+    <!-- Font Awesome kit-->
+    <script src="https://kit.fontawesome.com/ccfe7cad8e.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
