--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         Main Content
     </main>
     <footer>
-        <ul>
+        <ul id="social-networks">
             <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
                     aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
             </li>
