--- a/index.html
+++ b/index.html
@@ -43,12 +43,34 @@
             <h2>Why Love Running With Us?</h2>
             <div id="benefits">
                 <div id="benefits-physical">
-                    <div><h3>Feel Healthy <i class="fa-solid fa-heart-pulse"></i></h3><hr><p>Since it improves aerobic fitness, running is a great way to help improve your cardiovascular health. Plus, it burns calories and can build strength.</p></div>
-                    <div><h3>Feel Strong <i class="fa-solid fa-dumbbell"></i></h3><hr><p>Running strengthens your heart by pumping blood more effectively through your body. </p></div>
+                    <div>
+                        <h3>Feel Healthy <i class="fa-solid fa-heart-pulse"></i></h3>
+                        <hr>
+                        <p>Since it improves aerobic fitness, running is a great way to help improve your cardiovascular
+                            health. Plus, it burns calories and can build strength.</p>
+                    </div>
+                    <div>
+                        <h3>Feel Strong <i class="fa-solid fa-dumbbell"></i></h3>
+                        <hr>
+                        <p>Running strengthens your heart by pumping blood more effectively through your body. </p>
+                    </div>
                 </div>
                 <div id="benefits-mental">
-                    <div><h3>Feel Free <i class="fa-brands fa-fly"></i></h3><hr><p>Physical exercise, running included, is known to release endorphins in the brain. Endorphins make you more energetic, more awake and, yes, happier.</p></div>
-                    <div><h3>Get Social <i class="fa-solid fa-globe"></i></h3><hr><p>When we run with others, we can run farther and faster more easily. Social running can pull you out of a running funk or low mood, and inspire you to try new events.</p></div>
+                    <div>
+                        <h3>Feel Free <i class="fa-brands fa-fly"></i></h3>
+                        <hr>
+                        <p>Physical exercise, running included, is known to release endorphins in the brain. Endorphins
+                            make you more energetic, more awake and, yes, happier.</p>
+                    </div>
+                    <div>
+                        <h3>Get Social <i class="fa-solid fa-globe"></i></h3>
+                        <hr>
+                        <p>When we run with others, we can run farther and faster more easily. Social running can pull
+                            you out of a running funk or low mood, and inspire you to try new events.</p>
+                    </div>
+                </div>
+                <div id="benefits-image">
+                    <div id="circle-cover-bg"></div>
                 </div>
             </div>
         </section>
@@ -59,13 +81,16 @@
                     aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
             </li>
             <li><a href="https://www.twitter.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-square-twitter"></i></i></a>
+                    aria-label="Visit our Twitter page (opens in a new tab)"><i
+                        class="fa-brands fa-square-twitter"></i></i></a>
             </li>
             <li><a href="https://www.youtube.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our YouTube page (opens in a new tab)"><i class="fa-brands fa-square-youtube"></i></a>
+                    aria-label="Visit our YouTube page (opens in a new tab)"><i
+                        class="fa-brands fa-square-youtube"></i></a>
             </li>
             <li><a href="https://www.instagram.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
+                    aria-label="Visit our Instagram page (opens in a new tab)"><i
+                        class="fa-brands fa-instagram"></i></a>
             </li>
         </ul>
     </footer>
