--- a/signup.html
+++ b/signup.html
@@ -33,7 +33,37 @@
         </nav>
     </header>
     <main>
-        Main Content
+        <section id="signup">
+            <form id="signup form" method="POST" action="https://formdump.codeinstitute.net">
+                <h2><i class="fa-solid fa-heart-pulse"></i> Let's get you signed up!</h2>
+                <label for="first_name">First Name</label>
+                <input id="first_name" type="text" class="text-input" name="first_name" required>
+                <br>
+                <label for="last_name">Last Name</label>
+                <input id="last_name" type="text" class="text-input" name="last_name" required>
+                <br>
+                <label for="email_address">Email Address</label>
+                <input id="email_address" type="email" class="text-input" name="email_address" required>
+                <br>
+                <div class="radio-buttons">
+                    <div id="road">
+                        <label for="road">Road</label>
+                        <input id="road" type="radio" name="running_preference" value="road" required checked>
+                    </div>
+                    <div id="trail">
+                        <label for="trail">Trail</label>
+                        <input id="trail" type="radio" name="running_preference" value="trail" required checked>
+                    </div>
+                    <div id="both">
+                        <label for="both">Both</label>
+                        <input id="both" type="radio" name="running_preference" value="both" required checked>
+                    </div>
+                    <button type="submit" class="join-button">Let's Run</button>
+
+                </div>
+            </form>
+        </section>
+
     </main>
     <footer>
         <ul id="social-networks">
