--- a/signup.html
+++ b/signup.html
@@ -34,7 +34,7 @@
     </header>
     <main>
         <section id="signup">
-            <form id="signup form" method="POST" action="https://formdump.codeinstitute.net">
+            <form id="signup-form" method="POST" action="https://formdump.codeinstitute.net">
                 <h2><i class="fa-solid fa-heart-pulse"></i> Let's get you signed up!</h2>
                 <label for="first_name">First Name</label>
                 <input id="first_name" type="text" class="text-input" name="first_name" required>
