Edit typo missed </section

--- a/gallery.html
+++ b/gallery.html
@@ -47,6 +47,7 @@
                 <img src="assets/images/mud-run.webp"
                     alt="Two women runners taking a muddy selfie after the Mud Runners championship">
             </div>
+            </section>
     </main>
     <footer>
         <ul id="social-networks">
@@ -55,7 +56,7 @@
             </li>
             <li><a href="https://www.twitter.com/" target="_blank" rel="noopener"
                     aria-label="Visit our Twitter page (opens in a new tab)"><i
-                        class="fa-brands fa-square-twitter"></i></i></a>
+                        class="fa-brands fa-square-twitter"></i></a>
             </li>
             <li><a href="https://www.youtube.com/" target="_blank" rel="noopener"
                     aria-label="Visit our YouTube page (opens in a new tab)"><i
