--- a/signup.html
+++ b/signup.html
@@ -72,7 +72,7 @@
             </li>
             <li><a href="https://www.twitter.com/" target="_blank" rel="noopener"
                     aria-label="Visit our Twitter page (opens in a new tab)"><i
-                        class="fa-brands fa-square-twitter"></i></i></a>
+                        class="fa-brands fa-square-twitter"></i></a>
             </li>
             <li><a href="https://www.youtube.com/" target="_blank" rel="noopener"
                     aria-label="Visit our YouTube page (opens in a new tab)"><i
