Removed id for <div>

--- a/signup.html
+++ b/signup.html
@@ -46,15 +46,15 @@
                 <input id="email_address" type="email" class="text-input" name="email_address" required>
                 <br>
                 <div class="radio-buttons">
-                    <div id="road">
+                    <div>
                         <label for="road">Road</label>
                         <input id="road" type="radio" name="running_preference" value="road" required checked>
                     </div>
-                    <div id="trail">
+                    <div>
                         <label for="trail">Trail</label>
                         <input id="trail" type="radio" name="running_preference" value="trail" required checked>
                     </div>
-                    <div id="both">
+                    <div>
                         <label for="both">Both</label>
                         <input id="both" type="radio" name="running_preference" value="both" required checked>
                     </div>
